[package]
name = "nautilus"
version = "0.0.1"
authors = ["Joe Caulfield <jcaulfield135@gmail.com>"]
repository = "https://github.com/nautilus-project/nautilus"
license = "Apache-2.0"
description = "SQL-native Solana program framework"
rust-version = "1.77.2"
edition = "2021"

[dependencies]
borsh = "0.10.3"
borsh-derive = "1.5.1"
mpl-token-metadata = "4.1.2"
nautilus-derive = { path = "./derive", version = "0.0.1" }
num-traits = "0.2.15"
solana-program = "1.18.1"
spl-associated-token-account = "=3.0.2"
spl-token = "4.0.1"
spl-token-2022 = "=3.0.2"
splogger = { git = "https://github.com/nautilus-project/splogger", branch = "main", version = "0.0.1" }
thiserror = "1.0.40"
winnow = "=0.4.1"